--- a/css/app.css
+++ b/css/app.css
@@ -40,6 +40,7 @@ img, picture, video, iframe, figure{
 }
 a {
     display: block;
+    cursor: none;
 }
 p a {
     display: inline;
@@ -94,6 +95,7 @@ body{
     font-smooth: always;
     -webkit-font-smoothing: antialiased;
     -webkit-font-smoothing: grayscale;
+    cursor: none;
 }
 
 
@@ -184,9 +186,11 @@ body{
     justify-content: center;
     align-items: center;
     margin: 4.5em 0;
+
 }
 .seccion .info{
  font-size: 1.2em;
+ animation: aparecer1 2s ease 1 both;
 }
 .seccion .ul{
     margin: 4em 0 0;
@@ -204,11 +208,13 @@ body{
     padding: 1em 1em 1em;
     text-transform: uppercase;
     font-weight: 600;
-    transition: all 0.3s;
-    transform:scale(1)
+    transition: all .5s ease;
+    animation: aparecer1 2s ease 1 backwards;
+}
+.seccion .ul>:nth-child(2) .a{
+    animation-delay: .2s;
 }
 .seccion .ul .a:hover{
-    transform:scale(1.1);
     border-color: white;
 }
 .seccion .h2{
@@ -229,7 +235,7 @@ body{
     max-width: 40em;
     margin: 1em 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     gap:1em;
 }
 .seccion .article{
@@ -363,4 +369,30 @@ body{
     .seccion .ul .a{
         font-size: 0.5em;
     }
+} 
+@keyframes aparecer1{
+    from{
+        opacity: 0;
+        transform: translateY(50%);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0%);
+    }
 }
+#cursor{
+    width: 5em;
+    height: 5em;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    pointer-events: none;
+    border-radius: 50%;
+    mix-blend-mode: difference;
+}
+#cursor.mini{
+    transform: scale(0.7);
+    transition: all .1s linear;
+} 
